Set <h1> margin-top to 0 to solve vertical margin collapse

--- a/HTML_CSS/tt_web_design/css-layouts/css/style.css
+++ b/HTML_CSS/tt_web_design/css-layouts/css/style.css
@@ -13,6 +13,10 @@ a {
 	text-decoration: none;
 }
 
+h1 {
+  margin-top: 0;
+}
+
 /* ================================= 
   Base Layout Styles
 ==================================== */
